--- a/Management Site/login.html
+++ b/Management Site/login.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap-clearmin.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/roboto.css">
     <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
-    <title>CLEARMIN / LESS</title>
+    <script src="assets/js/lib/jquery-2.1.3.min.js"></script>
+    <title>Tasty Menu Login</title>
     <style></style>
   </head>
   <body class="cm-login">
@@ -16,27 +17,54 @@
     </div>
     
     <div class="col-sm-6 col-md-4 col-lg-3" style="margin:40px auto; float:none;">
-      <form method="post" action="index.html">
+      <form>
 	<div class="col-xs-12">
           <div class="form-group">
 	    <div class="input-group">
 	      <div class="input-group-addon"><i class="fa fa-fw fa-user"></i></div>
-	      <input type="text" name="username" class="form-control" placeholder="Username">
+	      <input type="text" id="username"  class="form-control" placeholder="Username">
 	    </div>
           </div>
           <div class="form-group">
 	    <div class="input-group">
 	      <div class="input-group-addon"><i class="fa fa-fw fa-lock"></i></div>
-	      <input type="password" name="password" class="form-control" placeholder="Password">
+	      <input type="password" id="password"  class="form-control" placeholder="Password">
 	    </div>
           </div>
         </div>
 	<div class="col-xs-6">
           <div class="checkbox"><label><input type="checkbox"> Remember me</label></div>
 	</div><div class="col-xs-6">
-          <button type="submit" class="btn btn-block btn-primary">Sign in</button>
+          <button type="submit" onclick="return login()" class="btn btn-block btn-primary">Sign in</button>
+          
         </div>
       </form>
+      <div class="col-xs-6">
+          <a href="signup.html"><button class="btn btn-block btn-primary">Sign Up</button></a>
+        </div>
     </div>
+    <script type="text/javascript">
+    	function login(){
+    		var url = "https://tasteservice.chinacloudsites.cn/api/v1/admin/login";
+    		var username = $("#username").val();
+    		var password = $("#password").val();
+    		var xhttp = new XMLHttpRequest();
+    		xhttp.open("GET", url+"?username="+username+"&password="+password, false);
+			xhttp.onreadystatechange = function() {
+			    if (this.readyState == 4 && this.status == 200) {
+			       // Typical action to be performed when the document is ready:
+			       sessionStorage.setItem("username", username);
+			        $(window).attr('location','index.html');
+   				} else{
+   					alert("Username or Password is not correct. Please try again.");
+   					return;
+   				}
+			};
+		
+			xhttp.send();
+			return false;
+    	}
+
+    </script>
   </body>
 </html>
