--- a/Management Site/index.html
+++ b/Management Site/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -8,21 +9,29 @@
         <link rel="stylesheet" type="text/css" href="assets/css/material-design.css">
         <link rel="stylesheet" type="text/css" href="assets/css/small-n-flat.css">
         <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
+        <script src="assets/js/lib/jquery-2.1.3.min.js"></script>
+        <script src="assets/js/jquery.mousewheel.min.js"></script>
+        <script src="assets/js/jquery.cookie.min.js"></script>
+        <script src="assets/js/fastclick.min.js"></script>
+        <script src="assets/js/bootstrap.min.js"></script>
+        <script src="assets/js/clearmin.min.js"></script>
+        <script src="assets/js/demo/home.js"></script>
+        <script src="assets/js/index.js"></script>
         <title>豪吃</title>
     </head>
     <body class="cm-no-transition cm-1-navbar">
         <div id="cm-menu">
             <nav class="cm-navbar cm-navbar-primary">
-                <div class="cm-flex"><a href="index.html" class="cm-logo"></a></div>
+                <div class="cm-flex"><a href="dashboard.html" class="cm-logo"></a></div>
                 <div class="btn btn-primary md-menu-white" data-toggle="cm-menu"></div>
             </nav>
             <div id="cm-menu-content">
                 <div id="cm-menu-items-wrapper">
                     <div id="cm-menu-scroller">
                         <ul class="cm-menu-items">
-                            <li class="active"><a href="index.html" class="sf-house">主页</a></li>
+                            <li class="active"><a href="dashboard.html" class="sf-house">主页</a></li>
                             <li><a href="dashboard-sales.html" class="sf-dashboard">收入管理</a></li>
-                            <li><a href="components-text.html" class="sf-brick">菜单管理</a></li>
+                            <li><a href="dashboard-menu.html" class="sf-brick">菜单管理</a></li>
                             
                         </ul>
                     </div>
@@ -33,7 +42,7 @@
             <nav class="cm-navbar cm-navbar-primary">
                 <div class="btn btn-primary md-menu-white hidden-md hidden-lg" data-toggle="cm-menu"></div>
                 <div class="cm-flex">
-                    <h1>主页</h1> 
+                    <h1 class="test session">主页</h1> 
                 </div>
                 <div class="dropdown pull-right">
                     <button class="btn btn-primary md-account-circle-white" data-toggle="dropdown"></button>
@@ -42,7 +51,7 @@
                             <a style="cursor:default;"><strong>John Smith</strong></a>
                         </li>
                         <li>
-                            <a href="login.html"><i class="fa fa-fw fa-sign-out"></i>登出</a>
+                            <a href="index.html"><i class="fa fa-fw fa-sign-out"></i>登出</a>
                         </li>
                     </ul>
                 </div>
@@ -74,12 +83,6 @@
             </div>
             <footer class="cm-footer"><span class="pull-left">Connected as John Smith</span><span class="pull-right">&copy; PAOMEDIA SARL</span></footer>
         </div>
-        <script src="assets/js/lib/jquery-2.1.3.min.js"></script>
-        <script src="assets/js/jquery.mousewheel.min.js"></script>
-        <script src="assets/js/jquery.cookie.min.js"></script>
-        <script src="assets/js/fastclick.min.js"></script>
-        <script src="assets/js/bootstrap.min.js"></script>
-        <script src="assets/js/clearmin.min.js"></script>
-        <script src="assets/js/demo/home.js"></script>
+        
     </body>
 </html>
