--- a/WebApp/WebApp/Management/dashboard-menu.html
+++ b/WebApp/WebApp/Management/dashboard-menu.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="assets/css/small-n-flat.css">
         <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
 
-        <title>豪吃</title>
+        <title>TastyMenu</title>
     </head>
     <body class="cm-no-transition cm-1-navbar">
         <div id="cm-menu">
@@ -39,9 +39,6 @@
                 <div class="dropdown pull-right">
                     <button class="btn btn-primary md-account-circle-white" data-toggle="dropdown"></button>
                     <ul class="dropdown-menu">
-                        <li class="disabled text-center">
-                            <a style="cursor:default;"><strong>John Smith</strong></a>
-                        </li>
                         <li>
                             <a href="index.html"><i class="fa fa-fw fa-sign-out"></i>登出</a>
                         </li>
@@ -72,7 +69,7 @@
                         <div>
                             <!--<input type="text" id="prodId" size="5" />-->
 
-                            <input style="background-color:#129999; color: white;padding:10px" type="button" value="保存修改" onclick="Edit();" />
+                            <input style="background-color:#129999; color: white;padding:10px" type="button" value="保存修改" onclick="edit();" />
                             <br/>
                             <br />
                             <br />
@@ -81,7 +78,7 @@
                     </div>
                 </div>
             </div>
-            <footer class="cm-footer"><span class="pull-left"></span><span class="pull-right">&copy; 豪吃</span></footer>
+            <footer class="cm-footer"><span class="pull-left"></span><span class="pull-right">&copy; TastyMenu</span></footer>
         </div>
         <script src="assets/js/lib/jquery-2.1.3.min.js"></script>
         <script src="assets/js/jquery.mousewheel.min.js"></script>
@@ -104,14 +101,14 @@
                             html += '<tr><th>分类</th><th>菜名</th><th>菜系</th><th>描述</th><th>口味</th><th>原料</th><th>价格</th><th>图片</th></tr>';
                             item.items.forEach(function (dish) {
                                 html += '<tr>';
-                                html += '<td>' + dish.name + '</td>';
-                                html += '<td>' + dish.category + '</td>';
-                                html += '<td>' + dish.cuisine + '</td>';
-                                html += '<td>' + dish.description + '</td>';
-                                html += '<td>' + dish.flavors + '</td>';
-                                html += '<td>' + dish.ingredients + '</td>';
-                                html += '<td>' + dish.price + '</td>';
-                                html += '<td>' + dish.image + '</td>';
+                                html += '<td class ="name">' + dish.name + '</td>';
+                                html += '<td class = "category">' + dish.category + '</td>';
+                                html += '<td class = "cuisine">' + dish.cuisine + '</td>';
+                                html += '<td class = "description">' + dish.description + '</td>';
+                                html += '<td class = "flavors">' + dish.flavors + '</td>';
+                                html += '<td class = "ingredients">' + dish.ingredients + '</td>';
+                                html += '<td class = "price">' + dish.price + '</td>';
+                                html += '<td class = "image">' + dish.image + '</td>';
                                 html += '</tr>';
                             });
                             html += '</table>';
@@ -126,6 +123,10 @@
                         alert("系统繁忙，请稍后再试");
                     });
             });
+
+            function edit() {
+
+            }
         </script>
     </body>
 </html>
