--- a/WebApp/WebApp/Management/dashboard-sales.html
+++ b/WebApp/WebApp/Management/dashboard-sales.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="assets/css/small-n-flat.css">
         <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
 
-        <title>豪吃</title>
+        <title>TastyMenu</title>
     </head>
     <body class="cm-no-transition cm-1-navbar">
         <div id="cm-menu">
@@ -39,9 +39,6 @@
                 <div class="dropdown pull-right">
                     <button class="btn btn-primary md-account-circle-white" data-toggle="dropdown"></button>
                     <ul class="dropdown-menu">
-                        <li class="disabled text-center">
-                            <a style="cursor:default;"><strong>John Smith</strong></a>
-                        </li>
                         <li>
                             <a href="index.html"><i class="fa fa-fw fa-sign-out"></i>登出</a>
                         </li>
