--- a/WebApp/WebApp/Management/dashboard-menu.html
+++ b/WebApp/WebApp/Management/dashboard-menu.html
@@ -174,7 +174,7 @@
                         
 
                         var html = '<table id="mainTable">';
-                        html += '<tr><th>分类</th><th>菜名</th><th>菜系</th><th>描述</th><th>口味</th><th>原料</th><th>价格</th><th>图片</th></tr>';
+                        html += '<tr><th>菜名</th><th>分类</th><th>菜系</th><th>描述</th><th>口味</th><th>原料</th><th>价格</th><th>图片</th></tr>';
                         $.each(data, function (key, item) {
 
                             var _cui_html = '<select class="cuisine-cate">';
@@ -317,14 +317,6 @@
                 })
                 i++;
             }
-            // var name = $('.name').html();
-            // var category = $('.category').html();
-            // var cuisine = $('.cuisine').html();
-            // var description = $('.description').html();
-            // var flavors = $('.flavors').html();
-            // var ingredients = $('.ingredients').html();
-            // var price = $('.price').html();
-            // var img = imgUrl;
 
         }
     </script>
