--- a/WebApp/WebApp/Management/dashboard.html
+++ b/WebApp/WebApp/Management/dashboard.html
@@ -68,9 +68,10 @@
                     <div class="panel-heading"></div>
                     <div class="panel-body" id="demo-buttons">
                         <div class="row">
-                            <p id="address">餐厅地址:</p>
-                            <p id="owner">老板:</p>
-                            <p id="phone">联系电话:</p>
+                            
+                        </div>
+                        <div class="success">
+
                         </div>
                     </div>
                 </div>
