--- a/WebApp/WebApp/Management/dashboard-menu.html
+++ b/WebApp/WebApp/Management/dashboard-menu.html
@@ -62,6 +62,7 @@
             <h2 style="margin-top:0;">菜单管理</h2>
             <p>如需添加菜品或者修改菜名菜价请在clover修改，每次修改以后请点击下面的按钮同步菜单</p>
             <button id="sync">同步菜单</button>
+            <h2>同步成功</h2>
         </div>
         <div class="container-fluid">
             <div class="panel panel-default">
@@ -118,6 +119,15 @@
                 return;
             });
             
+            $.ajax({
+                url: '/api/v1/admin/sync',
+                type: 'post',
+                contentType: false,
+                processData: false,
+                success: function (e) {
+                    
+                }
+            })
 
             var id = sessionStorage.getItem("userId");
             $.getJSON(cui_cate_uri).done(function (cuisineCategories) {
