--- a/WebApp/WebApp/Management/index.html
+++ b/WebApp/WebApp/Management/index.html
@@ -44,7 +44,7 @@
         </form>
         <br />
         <div class="col-xs-12">
-            <a href="https://sandbox.dev.clover.com/oauth/authorize?client_id=4N828BG7ST2SW"><button class="btn btn-block btn-block">Sign Up with Clover</button></a>
+            <a href="https://dev.clover.com/oauth/authorize?client_id=4N828BG7ST2SW"><button class="btn btn-block btn-block">Sign Up with Clover</button></a>
         </div>
         <div class="col-xs-12">
             <br />
